--- a/style/index.css
+++ b/style/index.css
@@ -17,7 +17,7 @@ canvas{
     display: none;
 }
 
-.header{
+.title{
     background-color: #d35400;
     color: white;
     font-family: 'Julius Sans One', sans-serif;
@@ -94,4 +94,13 @@ form span{
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
+}
+
+.content{
+    color: black; 
+    font-family: 'Quicksand', sans-serif;
+    width: 500px;
+    margin: auto; 
+    font-size: 30px;
+    background: gray;
 }
