--- a/style/index.css
+++ b/style/index.css
@@ -104,3 +104,30 @@ form span{
     font-size: 30px;
     background: gray;
 }
+
+.controller{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+}
+
+.control{
+    background-color: #d35400;
+    color: white;
+    //position: absolute;
+    padding: 40px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.inline{
+    display: inline-block;
+}
+
+.center{
+    margin: auto;
+}
